# tracing-dynamic

./: .gitignore  Cargo.toml  README.md
examples/: example.rs
src/: event_factory.rs  factory.rs  lib.rs  span_factory.rs
src/snapshots/: tracing_dynamic__event_factory__test__ERROR.snap  tracing_dynamic__event_factory__test__INFO.snap  tracing_dynamic__span_factory__test__ERROR.snap  tracing_dynamic__span_factory__test__ERROR.snap.new  tracing_dynamic__span_factory__test__INFO.snap  tracing_dynamic__span_factory__test__INFO.snap.new
