[package]
name = "tracing_dynamic"
version = "0.3.1"
edition = "2021"
license = "Apache-2.0"
description = "Utilities for working with Tokio Tracing, with dynamic fields for events and spans"
homepage="https://github.com/BrynCooke/tracing-dynamic"
repository="https://github.com/BrynCooke/tracing-dynamic"
keywords = ["tracing", "dynamic", "fields", "logging", "instrumentation"]





[dependencies]
tracing = "0.1"
tracing-core = "0.1"


[dev-dependencies]
tracing-subscriber = {version = "0.3", features = ["fmt", "json", "registry"]}
insta = "1.38.0"
